kubernetes/base/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: ${FRONTEND_REPLICAS}
  selector:
    matchLabels:
      app: frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        runAsGroup: 101
      containers:
        - name: frontend
          image: ghcr.io/flamingo-stack/major-league-github/frontend:${VERSION}
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 80
              name: http
            - containerPort: 81
              name: health
          resources:
            requests:
              memory: ${FRONTEND_REQUEST_MEMORY}
              cpu: ${FRONTEND_REQUEST_CPU}
            limits:
              memory: ${FRONTEND_LIMIT_MEMORY}
              cpu: ${FRONTEND_LIMIT_CPU}
          startupProbe:
            httpGet:
              path: /nginx-health
              port: health
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /nginx-health
              port: health
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /nginx-health
              port: health
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3 

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
