kubernetes/base/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-loadbalancer
  annotations:
    cloud.google.com/load-balancer-type: "External"
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
