kubernetes/base/simple-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service-external
  annotations:
    cloud.google.com/load-balancer-type: "External"
spec:
  type: LoadBalancer
  selector:
    app: web-service
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service  
metadata:
  name: frontend-external
  annotations:
    cloud.google.com/load-balancer-type: "External"
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
