kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "${STATIC_IP_NAME}"
    networking.gke.io/managed-certificates: "main-ingress-ssl-cert"
    networking.gke.io/v1beta1.FrontendConfig: "main-ingress-frontend-config"
spec:
  rules:
  - host: ${DOMAIN_NAME}.${DOMAIN_SUFFIX}
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service-service
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80${ROOT_DOMAIN_RULE}
